--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,8 @@
     --dark: #443737;
     --light: #ffffff;
     --light-rgb: 255, 255, 255; 
+    --line: #dedede;
+    --tr: .2s;
 
 }
 
@@ -29,7 +31,7 @@ a {
 /* Header */
 
 .headeк {
-    border-bottom: 1px solid #dedede;
+    border-bottom: 1px solid var(--line);
 }
 
 .header-wrapper {
@@ -234,6 +236,7 @@ a {
     border: none;
     border-radius: 5px;
     margin-top: 12px;
+    transition: var(--tr);
 }
 
 .banner-btn:hover {
@@ -262,11 +265,17 @@ a {
     gap: 50px 20px;
 }
 
+.menu-item {
+    font-family: var(--nunito-sans);
+    text-align: center;
+}
+
 .menu-thumb {
     width: 100%;
     height: 430px;
     position: relative;
     overflow: hidden;
+    margin-bottom: 20px;
 }
 
 .menu-thumb img {
@@ -278,3 +287,165 @@ a {
     transform: translate(-50%, -50%);
     object-fit: cover;
 }
+
+.menu-name {
+    font-family: var(--nunito-sans);
+    font-size: 30px;
+    font-weight: 600;
+    line-height: 126%;
+    text-align: center;
+    color: var(--dark);
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+
+.menu-price {
+    font-family: var(--nunito-sans);
+    font-size: 20px;
+    font-weight: 700;
+    color: color-mix(in srgb, var(--dark) 50%, white);
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+
+.menu-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin: 0 auto;
+    font-size: 14px;
+    font-family: var(--nunito-sans);
+    font-weight: 700;
+    padding: 11px 32px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #1e2f40;
+    background-color: var(--accent-light);
+    border: none;
+    border-radius: 5px;
+    transition: var(--tr);
+}
+
+.menu-btn:hover {
+    background-color: var(--accent-dark);
+}
+
+.menu-title {
+    font-family: var(--nunito-sans);
+    font-size: 44px;
+    font-weight: 700;
+    line-height: 127%;
+    text-transform: uppercase;
+    text-align: left;
+    color: var(--dark); 
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.menu-select {
+    color: var(--dark);
+    font-size: 15px;
+    appearance: none;
+    flex-basis: 279px;
+    background-image: url(../images/chevron-down.svg);
+    background-size: 14px 10px;
+    background-repeat: no-repeat;
+    background-position: 89% center;
+    border: 1px solid var(--line);
+    padding: 13px 30px;
+    border-radius: 22px;
+}
+
+/* Footer */
+
+.footer {
+    background-color: #1E2F40;
+    padding-top: 110px;
+    padding-bottom: 120px;
+    margin-top: 140px;
+}
+
+.footer-wrapper {
+    display: flex;
+    justify-content: space-between;
+    max-width: 1182px;
+    flex-wrap: wrap; 
+}
+
+
+.footer-logo {
+    display: block;
+    width: 63px;
+    height: 56px;
+    background-image: url(../images/logo_light_min.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.footer-title {
+    color: var(--light);
+    font-family: var(--nunito-sans);
+    font-style: 20px;
+    font-weight: 800;
+    line-height: 190%;
+    text-transform: uppercase;
+    margin-top: 0;
+    margin-bottom: 13px;
+}
+
+.footer-nav {
+    display: flex;
+    flex-direction: column;
+    gap: 9px;
+}
+
+.footer-link {
+    color: rgba(var(--light-rgb), .8);
+    font-style: 15px;
+    line-height: 160%;
+    transition: var(--tr);
+}
+
+.footer-link:hover {
+    color: var(--accent-light);
+}
+
+.footer-list {
+    list-style-type: none;
+    padding-left: 0;
+    margin: 0;
+}
+
+.footer-list-item {
+    color: var(--light);
+    font-style: 15px;
+    font-weight: 700;
+    line-height: 160%;
+}
+
+.footer-list-item span {
+    display: block;
+    color: rgba(var(--light-rgb)), 0.8;
+    font-weight: 400;
+}
+
+.footer-list-item:not(:last-child) {
+    margin-bottom: 14px;
+}
+
+.footer-tel {
+    display: block;
+    color: var(--accent-light);
+    font-family: var(--nunito-sans);
+    font-style: 20px;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin-top: 12px;
+    transition: var(--tr);
+}
+
+.footer-tel:hover {
+    color: var(--light);
+}
+
