--- a/styles/main.css
+++ b/styles/main.css
@@ -26,21 +26,33 @@ a {
     margin: 0 auto;
     padding-left: 15px;
     padding-right: 15px;
+    box-sizing: border-box;
 }
 
 /* Header */
 
-.headeк {
+.header {
     border-bottom: 1px solid var(--line);
 }
 
 .header-wrapper {
     display: flex;
     align-items: center;
-    gap: 196px; 
+    gap: 56px; 
     padding-top: 26px;
     padding-bottom: 26px;
 
+}
+
+.burger-menu {
+    display: none;
+    width: 24px;
+    height: 22px;
+    background-image: url(../images/burger_menu.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-color: transparent;
+    border: none;
 }
 
 .logo {
@@ -57,6 +69,7 @@ a {
     flex-grow: 1;
     display: flex;
     gap: 47px;
+    margin-left: min(10vw, 140px); -- 
 }
 
 .nav-link {
@@ -111,6 +124,37 @@ a {
     position: absolute;
     left: 17px;
     bottom: 0;
+}
+
+.button-up {
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    font-size: 12px;
+    font-family: var(--nunito-sans);
+    font-weight: 700;
+    text-align: center;
+    padding: 8px 8px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #1e2f40;
+    background-color: var(--accent-light);
+    border: none;
+    border-radius: 5px;
+    margin-top: 12px;
+    transition: var(--tr);
+}
+
+.button-up:hover {
+    background-color: var(--accent-dark);
+}
+
+.button-up.hidden {
+    opacity: 0;
+}
+
+.button-up.visible {
+    opacity: 1;
 }
 
 /* HERO */
@@ -225,10 +269,13 @@ a {
     line-height: 160%;
 }
 .banner-btn {
+    display: block;
+    max-width: 170px;
     font-size: 14px;
     font-family: var(--nunito-sans);
     font-weight: 700;
-    padding: 22px 25px;
+    text-align: center;
+    padding: 22px 0px;
     text-transform: uppercase;
     text-decoration: none;
     color: #1e2f40;
@@ -369,10 +416,8 @@ a {
 .footer-wrapper {
     display: flex;
     justify-content: space-between;
-    max-width: 1182px;
-    flex-wrap: wrap; 
+    gap: 15px;
 }
-
 
 .footer-logo {
     display: block;
@@ -402,7 +447,7 @@ a {
 
 .footer-link {
     color: rgba(var(--light-rgb), .8);
-    font-style: 15px;
+    font-size: 15px;
     line-height: 160%;
     transition: var(--tr);
 }
@@ -426,12 +471,16 @@ a {
 
 .footer-list-item span {
     display: block;
-    color: rgba(var(--light-rgb)), 0.8;
+    color: rgba(var(--light-rgb), 0.8);
     font-weight: 400;
 }
 
 .footer-list-item:not(:last-child) {
     margin-bottom: 14px;
+}
+
+.footer-item:last-child {
+    flex-basis: 194px;
 }
 
 .footer-tel {
@@ -440,12 +489,356 @@ a {
     font-family: var(--nunito-sans);
     font-style: 20px;
     font-weight: 800;
+    text-align: right;
     text-transform: uppercase;
     margin-top: 12px;
     transition: var(--tr);
+}
+
+.footer-tel._mobile {
+    display: none;
 }
 
 .footer-tel:hover {
     color: var(--light);
 }
 
+/* Contacts */
+
+.hero-contact {
+    background-image: url(../images/hero-contact.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    text-align: center;
+    padding-top: 141px;
+    padding-bottom: 141px;
+}
+
+.contact-main {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    max-width: 1057px;
+    margin: 140px auto 60px;
+}
+
+.contact-map {
+    flex-basis: 680px;
+}
+
+.contact-adress {
+    flex-basis: calc(100% - 680px - 20px);
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.contact-adress > li:not(:last-child) {
+    margin-bottom: 26px;
+}
+
+.contact-adress > li > span {
+    display: block;
+    font-size: 15px;
+    line-height: 160%;
+}
+
+.contact-adress > li > span:first-child {
+    font-family: var(--nunito-sans);
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 190%;
+    text-transform: uppercase;
+    margin-left: 3px;
+    margin-bottom: 4px;
+}
+
+.contact-adress > li > span:last-child {
+    font-weight: 700;
+    margin-top: 10px;
+}
+
+.contact-additionally {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    max-width: 1057px;
+    list-style-type: none;
+    padding-left: 0;
+    margin: 0 auto;
+}
+
+.contact-additionally > li {
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.contact-additionally > li::before {
+    content: '';
+    display: block;
+    width: 80px;
+    height: 80px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.contact-additionally > li:nth-child(1):before {
+    background-image: url(../images/contact/01.svg);
+}
+.contact-additionally > li:nth-child(2):before {
+    background-image: url(../images/contact/02.svg);
+}
+.contact-additionally > li:nth-child(3):before {
+    background-image: url(../images/contact/03.svg);
+}
+
+.contact-info,
+.contact-tel {
+    display: block;
+    color: var(--dark);
+    font-family: var(--nunito-sans);
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 140%;
+    margin-top: 5px;
+}
+
+.contact-tel {
+    transition: var(--tr);
+}
+
+.contact-tel:hover {
+    color: var(--accent-light);
+}
+
+/*Media*/
+
+@media (max-width: 1080px) {
+    .header-wrapper {
+        gap: 40px;
+    }
+    .nav {
+        margin-left: 0;
+        gap: min(3vw, 30px);
+    }
+}
+
+@media (max-width: 768px) {
+    .logo {
+    width: 150px;
+    height: 47.81px;
+    }
+    .header-wrapper {
+        gap: 45px;
+    }
+    .nav {
+        gap: 22px;
+    }
+    .banner {
+        margin-top: 72px;
+    }
+    .banner-wrapper {
+        padding: 100px 40px;
+    }
+    .menu-header {
+        margin-top: 80px;
+    }
+    .menu-box {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .menu-box._additionally {
+        grid-template-columns: 1fr;
+    }
+    .menu-item._additionally {
+        display: flex;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .menu-item._additionally .menu-thumb {
+        flex-basis: calc(60% - 20px);
+        height: 260px;
+        margin-bottom: 0;
+    }
+
+    .menu-item._additionally .menu-info {
+        flex-basis: 40%;
+    }
+
+    .footer {
+        padding-top: 62px;
+        padding-bottom: 71px;
+    }
+
+    .footer-nav {
+        margin-bottom: 20px;
+    }
+
+    .footer-item:last-child {
+        display: none;
+    }
+
+    .footer-tel._mobile {
+        display: block;
+        text-align: left;
+    }
+}
+
+@media (max-width: 730px) {
+    .header-wrapper {
+        gap: 21px;
+        padding-top: 19px;
+        padding-bottom: 19px;
+    }
+    .nav {
+        display: none;
+    }
+    .nav._modal {
+        display: flex;
+        flex-direction: column;
+    }
+    .nav-link::after {
+        display: none;
+    }
+    .burger-menu {
+        display: block;
+    }
+    .logo {
+        flex-grow: 1;
+        width: 116px;
+        height: 37px;
+    }
+    .modal {
+        width: 100%;
+        max-width: 500px;
+        background-color: #fff8dc;
+        padding: 40px 15px;
+        position: absolute;
+        top: -400px;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        box-sizing: border-box;
+        text-align: center;
+        transition: var(--tr);
+    }
+    .modal-close {
+        display: block;
+        width: 22px;
+        height: 22px;
+        background-image: url(../images/close.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-color: transparent;
+        border: none;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+    }
+
+    .hero {
+        padding-top: 57px;
+        padding-bottom: 55px;
+    }
+    .breadcrumbs {
+        font-size: 14px;
+    }
+    .hero-title {
+        font-size: 38px;
+        margin-top: 28px;
+        margin-bottom: 13px;
+    }
+    .hero-description {
+        font-size: 12px;
+        line-height: 166%;
+    }
+    .banner {
+        margin-top: 33px;
+    }
+    .banner-wrapper {
+        padding: 36px 15px 30px 15px;
+    }
+    .banner-title {
+        margin-bottom: 9px;
+    }
+    .banner-description {
+        font-size: 14px;
+        margin-bottom: 20px;
+        max-width: 220px;
+    }
+    .banner-btn {
+        max-width: 198px;
+    }
+    .menu-header {
+        margin-top: 58px;
+        margin-bottom: 30px;
+    }
+    .menu-title {
+        font-size: 27px;
+    }
+    .menu-select {
+        font-size: 12px;
+        flex-basis: 136px;
+        width: 136px;
+        background-position: 93% center;
+        padding: 13px 15px;
+    }
+    .menu-box {
+        gap: 24px 20px;
+    }
+    .menu-thumb {
+        height: 50vw;
+        margin-bottom: 10px;
+    }
+    .menu-item._additionally .menu-thumb {
+        height: 30vw;
+    }
+    .menu-name {
+        font-size: 13px;
+        margin-bottom: 8px;
+    }
+    .menu-price {
+        font-size: 20px;
+        margin-bottom: 14px;
+    }
+    .menu-btn {
+        padding: 11px 22px;
+    }
+    .footer {
+        margin-top: 80px;
+    }
+    .footer-wrapper {
+        flex-direction: column;
+        gap: 35px;
+        position: relative;
+    }
+    .footer-logo {
+        margin-bottom: 9px;
+    }
+    .footer-tel._mobile {
+        position: absolute;
+        top: -13px;
+        right: 0;
+    }
+    .footer-tel._mobile + .footer-tel._mobile {
+        top: 24px;
+    }
+    .footer-title {
+        font-size: 18px;
+    }
+    .footer-nav {
+        margin-bottom: 0;
+    }
+}
+
+@media (max-width: 450px) {
+    .menu-item._additionally .menu-thumb {
+        flex-basis: calc(100% - 130px - 20px);
+        height: 38vw;
+    }
+    .menu-item._additionally .menu-info {
+        flex-basis: 130px;
+    }
+}
